--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -14,9 +14,9 @@ bincode = "1.3.3"
 futures = "0.3.0"
 futures-util = "0.3.8"
 itertools = "0.10.1"
-jf-plonk = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git", branch = "main" }
-jf-primitives = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git", branch = "main"}
-jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git", branch = "main"}
+jf-plonk = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git", branch = "plonk-verifier" }
+jf-primitives = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git", branch = "plonk-verifier"}
+jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git", branch = "plonk-verifier"}
 markdown = "0.3"
 # phaselock = { version = "0.0.2", registry = "translucence"}
 phaselock = { git = "ssh://git@github.com/SpectrumXYZ/phaselock.git", branch = "main"}
