--- a/contracts/rust/Cargo.toml
+++ b/contracts/rust/Cargo.toml
@@ -22,6 +22,7 @@ ark-serialize = "0.3.0"
 ark-ff = "0.3.0"
 ark-ec = "0.3.0"
 ark-ed-on-bn254 = { version = "0.3.0", default-features = false }
+ark-poly = "0.3.0"
 hex = "0.4.3"
 tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
 rand = "0.8.4"
