Set up wallet server and implement basic lifecycle endpoints

--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -1,25 +1,28 @@
 [package]
-name = "multi_machine"
+name = "cape_wallet"
 version = "0.1.0"
-authors = ["Keyao Shen <keyao@translucence.net>", "corbett@pictographer.com"]
+authors = [
+    "Jeb Bearer <keyao@translucence.net>",
+    "Keyao Shen <keyao@translucence.net>",
+    "corbett@pictographer.com",
+]
 edition = "2018"
-license = "Copyright © 2021 Translucence Research, Inc. All rights reserved."
-default-run = "multi_machine"
+license = "Copyright © 2022 Translucence Research, Inc. All rights reserved."
+default-run = "cape_wallet"
 
 [dependencies]
 async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
-async-trait = "0.1.51"
-async-tungstenite = { version = "0.15.0", features = ["async-std-runtime"] }
 bincode = "1.3.3"
 futures = "0.3.0"
 futures-util = "0.3.8"
 itertools = "0.10.1"
+jf-aap = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "c9ded9359d82447ec5644c8df2921c16ba26c660" }
 jf-plonk = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "c9ded9359d82447ec5644c8df2921c16ba26c660" }
-jf-primitives = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "c9ded9359d82447ec5644c8df2921c16ba26c660" }
-jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "c9ded9359d82447ec5644c8df2921c16ba26c660" }
+jf-primitives = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "c9ded9359d82447ec5644c8df2921c16ba26c660"}
+jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "c9ded9359d82447ec5644c8df2921c16ba26c660"}
+lazy_static = "1.4.0"
 markdown = "0.3"
-phaselock = { git = "ssh://git@github.com/SpectrumXYZ/phaselock.git", branch = "main"}
-rand_chacha = "0.2.2"
+rand_chacha = "0.3.1"
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
@@ -28,10 +31,8 @@ snafu = { version = "0.6.10", features = ["backtraces"] }
 structopt = { version = "0.3", features = ["paw"] }
 strum = "0.20"
 strum_macros = "0.20.1"
-surf = "2.3.1"
 tagged-base64 = { git = "ssh://git@github.com/SpectrumXYZ/tagged-base64.git", branch = "main"}
 tempdir = "0.3.7"
-threshold_crypto = "0.4.0"
 tide = "0.16.0"
 tide-websockets = "0.4.0"
 toml = "0.5"
@@ -39,7 +40,9 @@ tracing = "0.1.26"
 tracing-distributed = "0.3.1"
 tracing-futures = "0.2"
 tracing-subscriber = "0.2.19"
+zerok_lib = { git = "ssh://git@github.com/SpectrumXYZ/spectrum.git", rev = "b7a7565c2d26f09b6f563b580d92c2279dd7ec83", features = ["mocks"]}
 
-[target.'cfg(target_os = "linux")'.dependencies]
-procfs = "0.11.0"
-
+[dev-dependencies]
+surf = "2.3.2"
+tempdir = "0.3.7"
+tracing-test = "0.2.1"
