--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -40,8 +40,7 @@ tracing = "0.1.26"
 tracing-distributed = "0.3.1"
 tracing-futures = "0.2"
 tracing-subscriber = "0.2.19"
-zerok_lib = { git = "ssh://git@github.com/SpectrumXYZ/spectrum.git", rev = "b86e2e0ef24aa313a51a82875309f562fe0184d0", features = ["mocks"]}
-
+zerok_lib = {git = "ssh://git@github.com/SpectrumXYZ/spectrum.git", branch = "main", features = ["mocks"]}
 [dev-dependencies]
 surf = "2.3.2"
 tempdir = "0.3.7"
