--- a/contracts/rust/Cargo.toml
+++ b/contracts/rust/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2018"
 doctest = false
 
 [dependencies]
-jf-plonk = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "c9ded9359d82447ec5644c8df2921c16ba26c660"}
-jf-primitives = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "c9ded9359d82447ec5644c8df2921c16ba26c660"}
-jf-aap = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "c9ded9359d82447ec5644c8df2921c16ba26c660"}
-jf-rescue = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "c9ded9359d82447ec5644c8df2921c16ba26c660"}
-jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "c9ded9359d82447ec5644c8df2921c16ba26c660"}
-zerok_lib = { git = "ssh://git@github.com/SpectrumXYZ/spectrum.git", rev = "b86e2e0ef24aa313a51a82875309f562fe0184d0" }
-ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
+jf-plonk = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "9e8f3a5ba77dcc523539689716cfe878d196469e"}
+jf-primitives = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "9e8f3a5ba77dcc523539689716cfe878d196469e"}
+jf-aap = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "9e8f3a5ba77dcc523539689716cfe878d196469e"}
+jf-rescue = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "9e8f3a5ba77dcc523539689716cfe878d196469e"}
+jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "9e8f3a5ba77dcc523539689716cfe878d196469e"}
+zerok_lib = { git = "ssh://git@github.com/SpectrumXYZ/spectrum.git", rev = "42e0ec823e30d7b32fed56d12bf2abf0a392458a" }
+ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "e0ee03328332776f5f18a52b968ea3f62df982cb" }
 itertools = "0.10.1" # needed for jf-aap to compile
 ark-std = "0.3.0"
 serde_json = "1.0.67"
