--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -13,6 +13,7 @@ default-run = "cape_wallet"
 [dependencies]
 async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
 bincode = "1.3.3"
+cap-rust-sandbox = { path = "../contracts/rust" }
 futures = "0.3.0"
 futures-util = "0.3.8"
 itertools = "0.10.1"
@@ -20,14 +21,18 @@ jf-aap = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-a
 jf-plonk = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
 jf-primitives = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
 jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
+key-set = { git = "ssh://git@github.com/SpectrumXYZ/key-set.git" }
 lazy_static = "1.4.0"
 markdown = "0.3"
+net = { git = "ssh://git@github.com/SpectrumXYZ/net.git" }
 rand_chacha = "0.3.1"
+reef = { git = "ssh://git@github.com/SpectrumXYZ/reef.git", rev = "6e3e7f683d2f8c1c1da662301f8ca8c2863018cc" }
+seahorse = { git = "ssh://git@github.com/SpectrumXYZ/seahorse.git" }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
 shellexpand = "2.0"
-snafu = { version = "0.6.10", features = ["backtraces"] }
+snafu = { version = "0.7", features = ["backtraces"] }
 structopt = { version = "0.3", features = ["paw"] }
 strum = "0.20"
 strum_macros = "0.20.1"
@@ -40,7 +45,8 @@ tracing = "0.1.26"
 tracing-distributed = "0.3.1"
 tracing-futures = "0.2"
 tracing-subscriber = "0.2.19"
-zerok_lib = { git = "ssh://git@github.com/SpectrumXYZ/spectrum.git", rev = "59141a5a085e4d04cef81a01916f01ef3183b990", features = ["mocks"] }
+universal-param = { git = "ssh://git@github.com/SpectrumXYZ/universal-param.git" }
+zerok_lib = { git = "ssh://git@github.com/SpectrumXYZ/spectrum.git", rev = "a1af8c87e5f5546b60dbd455dffa20ff211629c8", features = ["mocks"] }
 
 [dev-dependencies]
 surf = "2.3.2"
