--- a/wallet/api/api.toml
+++ b/wallet/api/api.toml
@@ -123,12 +123,13 @@ Transfer amount units of the given asset from the sender to the recipient. Retur
 """
 
 [route.wrap]
-PATH = ["wrap/address/:address/amount/:amount/asset/:asset"]
-":address" = "TaggedBase64"
+PATH = ["wrap/owner/:owner/ethaddress/:eth_address/amount/:amount/asset/:asset"]
+":owner" = "TaggedBase64"
+":eth_address" = "TaggedBase64"
 ":amount" = "Integer"
 ":asset" = "TaggedBase64"
 DOC = """
-Wrap amount units of the given asset from the address. Returns a serialized receipt which can be used to track the transaction through the validation process.
+Wrap amount units of the given asset from the eth address to the owner address. Returns a serialized receipt which can be used to track the transaction through the validation process.
 """
 
 [route.unwrap]
