--- a/contracts/package.json
+++ b/contracts/package.json
@@ -19,6 +19,7 @@
     "@summa-tx/memview-sol": "^2.0.0",
     "async": "^3.2.2",
     "async-child-process": "^1.1.1",
+    "hardhat-contract-sizer": "^2.4.0",
     "js-big-decimal": "^1.3.4",
     "random-seed": "^0.3.0"
   },
