workflow: check foreign asset def when sponsoring
Close #69

--- a/doc/workflow/Cargo.toml
+++ b/doc/workflow/Cargo.toml
@@ -8,6 +8,7 @@ cap-rust-sandbox = { path = "../../contracts/rust" }
 jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
 jf-rescue = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
 jf-aap = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish-apps.git", rev = "fd1de050c214584a296a11f366846a53a316c4d4" }
+cap-rust-sandbox = { path = "../../contracts/rust" }
 jf-utils = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
 jf-rescue = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" }
 
